# triangle

./: CMakeLists.txt  README.md  main.cpp
